fix: job posting box so it doesn't go behind filter bar

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -214,7 +214,6 @@ p{
     display:flex;
     align-items: center;
     align-content: space-around;
-    justify-content:center;
     width:100% - 2em;
     height:12em;
     margin:0em 2em;
